tests/NormalTests/paczka1/small_fuzzy/34320757.err
Error in line 2: muXZxTI1 A38 17,9
Error in line 8: V4GK8TID S577 74,3
Error in line 1: g3v A38 57,2
Error in line 14: V4GK8TID S1N6 51,5
Error in line 9: V4GK8TID A38 89,4
